# garcon

./: .dockerignore  .gitignore  Dockerfile  README.md  cabal.project  garcon.cabal
.github/workflows/: ci.yml  deploy.yml
app/: Main.hs
src/Garcon/: API.hs  App.hs  Server.hs
