cabal-version:      3.14
name:               garcon
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Real Limoges
maintainer:         b.real.limoges@gmail.com
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    hs-source-dirs:   src
    default-language: GHC2024
    exposed-modules:
        Garcon.API
        Garcon.App
        Garcon.Server
    build-depends:
        base ^>=4.21.0.0
      , aeson
      , chompsky
      , servant-server
      , text
      , wai
      , warp

executable garcon
    import:           warnings
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: GHC2024
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
    build-depends:
        base ^>=4.21.0.0
      , chompsky
      , garcon
      , warp